Modified Teams page

--- a/index.html
+++ b/index.html
@@ -28,60 +28,42 @@
 
     <div class="spacer"></div>
 
-
-    <div class="mydiv reveal">
-        <h2 class="title">
-            FACULTY MENTORS
-        </h2>
-
-
-        <div>
-            <div class="row">
-                <div class="rd">
-                    <iframe
-                        src="../src/Components/Card/card.html?name=Prof. Dhwaniket Kamble&description=Faculty Sponsor&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Home/Assets/Dhwaniket Kamble.jpg&backImage=/src/Pages/Home/Assets/Dhwaniket Kamble.jpg"
-                        class="cardFrame" frameborder="0" scrolling="no"></iframe>
-                </div>
-                <div>
-                    <iframe
-                        src="../src/Components/Card/card.html?name=Dr. Kamal Mehta&description=Faculty Mentor&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Home/Assets/Kamal Mehta.jpg&backImage=/src/Pages/Home/Assets/Kamal Mehta.jpg"
-                        class="cardFrame" frameborder="0" scrolling="no"></iframe>
-                </div>
-                <div>
-                    <iframe
-                        src="../src/Components/Card/card.html?name=Prof. Poonam Kapse&description=President&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Home/Assets/Poonam Kapse.jpg&backImage=/src/Pages/Home/Assets/Poonam Kapse.jpg"
-                        class="cardFrame" frameborder="0" scrolling="no"></iframe>
-                </div>
-                <div>
-                    <iframe
-                        src="../src/Components/Card/card.html?name=Prof. Diksha Bhalerao&description=Vice President&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Home/Assets/Diksha Bhalerao.jpg&backImage=/src/Pages/Home/Assets/Diksha Bhalerao.jpg"
-                        class="cardFrame" frameborder="0" scrolling="no"></iframe>
-                </div>
+    <div class="cont">
+        <div class="row bx reveal" style="align-items: center;">
+            <div class="abt-img">
+                <img src="../src/Pages/Home/Assets/acm_logo.png" width="300px" alt="logo">
             </div>
-            <div class="row">
-                <div>
-                    <iframe
-                        src="../src/Components/Card/card.html?name=Prof. Santosh Rathod&description=Website Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Home/Assets/Santosh Rathod.jpg&backImage=/src/Pages/Home/Assets/Santosh Rathod.jpg"
-                        class="cardFrame" frameborder="0" scrolling="no"></iframe>
-                </div>
-                <div>
-                    <iframe
-                        src="../src/Components/Card/card.html?name=Prof. Deepika Sharma&description=Website Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Home/Assets/Deepika Sharma.jpg&backImage=/src/Pages/Home/Assets/Deepika Sharma.jpg"
-                        class="cardFrame" frameborder="0" scrolling="no"></iframe>
-                </div>
-                <div>
-                    <iframe
-                        src="../src/Components/Card/card.html?name=Prof. Sumita Kumar&description=Newsletter Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Home/Assets/Sumita Kumar.jpg&backImage=/src/Pages/Home/Assets/Sumita Kumar.jpg"
-                        class="cardFrame" frameborder="0" scrolling="no"></iframe>
-                </div>
-                <div>
-                    <iframe
-                        src="../src/Components/Card/card.html?name=Prof. Snehal Lohi&description=Newsletter Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Home/Assets/Snehal Lohi.jpg&backImage=/src/Pages/Home/Assets/Snehal Lohi.jpg"
-                        class="cardFrame" frameborder="0" scrolling="no"></iframe>
-                </div>
+            <div class="abt-des">
+                <p>The Association for Computing Machinery (ACM) is a renowned global organization dedicated to
+                    advancing the field of computer science. With a rich history dating back to 1947, ACM provides a
+                    platform for professionals, researchers, and educators to collaborate and share knowledge, fostering
+                    innovation and promoting excellence in the computing industry.</p>
+            </div>
+        </div>
+        <div class="row bx reveal">
+            <div class="abt-des">
+                <p>The Association for Computing Machinery (ACM) is a renowned global organization dedicated to
+                    advancing the field of computer science. With a rich history dating back to 1947, ACM provides a
+                    platform for professionals, researchers, and educators to collaborate and share knowledge, fostering
+                    innovation and promoting excellence in the computing industry.</p>
+            </div>
+            <div class="abt-img">
+                <img src="../src/Pages/Home/Assets/acm_logo.png" width="300px" alt="logo">
+            </div>
+        </div>
+        <div class="row bx reveal">
+            <div class="abt-img">
+                <img src="../src/Pages/Home/Assets/acm_logo.png" width="300px" alt="logo">
+            </div>
+            <div class="abt-des">
+                <p>The Association for Computing Machinery (ACM) is a renowned global organization dedicated to
+                    advancing the field of computer science. With a rich history dating back to 1947, ACM provides a
+                    platform for professionals, researchers, and educators to collaborate and share knowledge, fostering
+                    innovation and promoting excellence in the computing industry.</p>
             </div>
         </div>
     </div>
+    
 
     <div class="spacer"></div>
 
