--- a/index.html
+++ b/index.html
@@ -28,39 +28,25 @@
 
     <div class="spacer"></div>
 
-    <div class="cont">
-        <div class="row bx reveal" style="align-items: center;">
-            <div class="abt-img">
-                <img src="../src/Pages/Home/Assets/acm_logo.png" width="300px" alt="logo">
-            </div>
-            <div class="abt-des">
-                <p>The Association for Computing Machinery (ACM) is a renowned global organization dedicated to
-                    advancing the field of computer science. With a rich history dating back to 1947, ACM provides a
-                    platform for professionals, researchers, and educators to collaborate and share knowledge, fostering
-                    innovation and promoting excellence in the computing industry.</p>
-            </div>
+    <div class="box reveal">
+        <div>
+            <iframe class="ev cardFrame"
+                src="../src/Components/Event/event.html?desp=The Association for Computing Machinery (ACM) is a renowned global 
+                organization dedicated to advancing the field of computer science. With a rich history dating back to 1947, 
+                ACM provides a platform for professionals, researchers, and educators to collaborate and share knowledge, fostering 
+                innovation and promoting excellence in the computing industry.&ev-img=/src/Pages/Home/Assets/acm_logo.png"
+                frameborder="0" width="100%" scrolling="no"></iframe>
         </div>
-        <div class="row bx reveal">
-            <div class="abt-des">
-                <p>The Association for Computing Machinery (ACM) is a renowned global organization dedicated to
-                    advancing the field of computer science. With a rich history dating back to 1947, ACM provides a
-                    platform for professionals, researchers, and educators to collaborate and share knowledge, fostering
-                    innovation and promoting excellence in the computing industry.</p>
-            </div>
-            <div class="abt-img">
-                <img src="../src/Pages/Home/Assets/acm_logo.png" width="300px" alt="logo">
-            </div>
-        </div>
-        <div class="row bx reveal">
-            <div class="abt-img">
-                <img src="../src/Pages/Home/Assets/acm_logo.png" width="300px" alt="logo">
-            </div>
-            <div class="abt-des">
-                <p>The Association for Computing Machinery (ACM) is a renowned global organization dedicated to
-                    advancing the field of computer science. With a rich history dating back to 1947, ACM provides a
-                    platform for professionals, researchers, and educators to collaborate and share knowledge, fostering
-                    innovation and promoting excellence in the computing industry.</p>
-            </div>
+    </div>
+
+    <div class="box reveal">
+        <div>
+            <iframe class="ev cardFrame"
+                src="../src/Components/Event/event.html?desp=The Association for Computing Machinery (ACM) is a renowned global 
+                organization dedicated to advancing the field of computer science. With a rich history dating back to 1947, 
+                ACM provides a platform for professionals, researchers, and educators to collaborate and share knowledge, fostering 
+                innovation and promoting excellence in the computing industry.&ev-img=/src/Pages/Home/Assets/acm_logo.png"
+                frameborder="0" width="100%" scrolling="no"></iframe>
         </div>
     </div>
     
