--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body background="../src/Pages/Home/Assets/bg.jpg">
+<body>
     <div class="stk">
         <iframe src="../src/Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
     </div>
