--- a/src/Pages/About/about.html
+++ b/src/Pages/About/about.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="about.css">
     <title>About</title>
 </head>
-<body background="../About/Assets/bg.jpg">
+<body>
     <div class="stk">
         <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
     </div>
