--- a/src/Pages/Contact/contact.html
+++ b/src/Pages/Contact/contact.html
@@ -8,7 +8,7 @@
     <title>Contact Us</title>
 </head>
 
-<body background="../Contact/Assets/bg.jpg">
+<body>
     <div class="stk">
         <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
     </div>
@@ -28,11 +28,11 @@
     <div class="contact">
         <h1 style="padding: 3%; font-weight: 700;">Contact Us</h1>
         <div style="justify-content: center; display: flex;">
-            <pre><form method="post" action="contact.php">
+            <pre><form>
     <input type="text" placeholder=" Name" name="name" style="height:5vh; font-family: 'Montserrat', sans-serif;" required><br>
     <input type="text" placeholder=" Email" name="email" style="height:5vh;" required><br>
     <textarea rows="5" placeholder=" Text" name="text"></textarea><br>
-    <button type="submit" value="submit form" style="background-color: dodgerblue;width: 3vw; justify-content: center; border-radius: 100%;"><img src="Assets/dm.png" style="width: 60%;padding: 5%;margin-right:10% ;"></button>
+    <button type="submit" style="background-color: dodgerblue;width: 3vw; justify-content: center; border-radius: 100%;"><img src="Assets/dm.png" style="width: 60%;padding: 5%;margin-right:10% ;"></button>
     </form></pre>
 
         </div>
