--- a/src/Pages/Past/past.html
+++ b/src/Pages/Past/past.html
@@ -8,7 +8,7 @@
     <title>Past Events</title>
 </head>
 
-<body background="../Past/Assets/bg.jpg">
+<body>
     <div class="stk">
         <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
     </div>
@@ -28,6 +28,9 @@
         </div>
 
     </div>
+
+    <div class="spacer"></div>
+
 
 
 
