--- a/src/Pages/Team/team.html
+++ b/src/Pages/Team/team.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="team.css">
 </head>
 
-<body background="../Team/Assets/bg.jpg">
+<body>
     <div class="stk">
         <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
     </div>
